--- a/src/components/Sections.module.css
+++ b/src/components/Sections.module.css
@@ -1,20 +1,33 @@
 .root {
   composes: separator from global;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  max-width: 85rem;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-.section:not(:last-child) {
-  margin-bottom: 1rem;
+.section {
+  min-width: 0;
+  max-width: 35em;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .list {
   margin-bottom: 0;
-  padding: 1.5rem 1.5rem 1rem;
+  padding: 1rem;
   list-style: none;
   background-color: white;
 }
 
-.list > li {
+.list > li:not(:last-child) {
   margin-bottom: 0.5rem;
+}
+
+.list strong {
+  font-weight: 600;
 }
 
 .icon {
@@ -23,45 +36,35 @@
   stroke: var(--lochmara);
 }
 
-@media (width >= 30em) {
+@media (width >= 40em) {
   .list {
-    padding: 2rem;
+    padding: 1.25rem 2rem;
   }
 }
 
-@media (width >= 50em) {
-  .section:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-
-  .content {
-    display: flex;
-  }
-
-  .list,
-  .imgWrap {
-    flex: 1 1 0%;
-    min-width: 0;
-    min-height: 300px;
+@media (width >= 67em) {
+  .root {
+    grid-template-columns: 1fr 1fr;
+    font-size: 90%;
   }
 
   .list {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding-bottom: 2.5rem;
+    padding: 1rem;
+  }
+}
+
+@media (width >= 80em) {
+  .root {
+    gap: 2rem;
   }
 
-  .list > li {
-    margin-bottom: 0;
+  .list {
+    padding: 1.25rem 2rem;
   }
+}
 
-  .imgWrap {
-    max-width: 640px;
-    max-height: 360px;
-  }
-
-  .img {
-    height: 100%;
+@media (width >= 85em) {
+  .root {
+    font-size: 100%;
   }
 }
