--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -6,7 +6,7 @@
   height: 3rem;
   margin-top: -3rem;
   background-color: white;
-  box-shadow: 0 0.5rem 0.5rem rgba(0 0 0 / 20%);
+  box-shadow: 0 0.5rem 0.5rem rgb(0 0 0 / 20%);
 }
 
 .nav {
